--- a/app/build.gradle
+++ b/app/build.gradle
@@ -162,54 +162,72 @@ dependencies {
     implementation 'com.contrarywind:Android-PickerView:4.1.4'
     implementation files('libs/core-3.2.1.jar')
     implementation 'com.meizu.flyme.internet:push-internal:3.6.3@aar'
-    //    implementation 'com.huawei.android.hms:push:2.6.0.301'
+
+    //implementation 'com.huawei.android.hms:push:2.6.0.301'
     compile('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true
     }
     implementation 'android.arch.lifecycle:extensions:1.1.0'
     implementation 'android.arch.lifecycle:common-java8:1.1.0'
-    //    compile project(path: ':rtskit')
+
+    //compile project(path: ':rtskit')
+
     //友盟统计
     implementation 'com.umeng.sdk:common:latest.integration'
     implementation 'com.umeng.sdk:analytics:latest.integration'
+
     //腾讯实时音视频
-    api 'com.tencent.imsdk:imsdk:latest.release'
+    api 'com.tencent.imsdk:imsdk:4.4.716'
     implementation 'com.tencent.liteav:LiteAVSDK_TRTC:latest.release'
+
     //其中latest.release指代最新iLiveSDK版本号
+
     // build.gradle 中，加载非p图普通版
     implementation 'com.tencent.ilivefilter:liteav_normal:1.1.21'
     implementation 'com.alibaba:fastjson:1.1.52.android'
     implementation files('libs/HwPush_SDK_V2705.jar')
     implementation 'com.github.huburt-Hu:NewbieGuide:v2.4.0'
+
     //导航
     implementation 'com.github.liqinew:slidenavigation:V.1.0.1'
     implementation project(':FlycoTabLayout_Lib')
+
     //语音识别
-    compile 'com.tencent.aai:aai:2.1.2:@aar'
+    compile 'com.tencent.aai:aai:2.1.5:@aar'
     implementation 'org.slf4j:slf4j-android:1.6.1-RC1'
+
     //EventBus
     implementation 'org.greenrobot:eventbus:3.0.0'
+
     //微信sdk
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+
     //倒角图片
     implementation 'org.raphets:roundimageview:1.2.0'
+
     //极光推送
     implementation 'cn.jiguang.sdk:jpush:3.3.2'
+
     // 此处以JPush 3.3.2 版本为例。
     implementation 'cn.jiguang.sdk:jcore:2.0.1'
+
     // 此处以JCore 2.0.1 版本为例
+
     //gif动画加载
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
+
     //网络框架
     implementation 'com.lzy.net:okgo:3.0.4'
     implementation files('libs/aip-java-sdk-4.1.1.jar')
     implementation files('libs/com.baidu.tts_2.3.2.20180713_6101c2a.jar')
+
     //implementation files('libs/libqcloudtts_1.2.1_release.aar')
     compile(name: 'libqcloudtts_1.2.1_release', ext: 'aar')
+
     //anko
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "org.jetbrains.anko:anko-appcompat-v7-commons:$anko_version"
-    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
